--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nq-tslib-base",
   "version": "0.0.1",
-  "description": "在H5页面中调用快应用功能",
+  "description": "A modern Typescript library scaffolding",
   "main": "dist/index.js",
   "jsnext:main": "dist/index.esm.js",
   "module": "dist/index.esm.js",
