--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "build:aio": "rollup -c config/rollup.config.aio.js",
     "build:aio.min": "cross-env NODE_ENV=production npm run build:aio",
     "build": "npm run clean && npm run build:self && npm run build:esm && npm run build:aio && npm run build:aio.min",
-    "compile:cjs": "cross-env NODE-ENV=production && babel src -d lib --no-babelrc --presets=@babel/preset-env,@babel/preset-flow",
-    "compile:es": "cross-env NODE-ENV=production && babel src -d es --no-babelrc --presets=@babel/preset-flow",
+    "build:cjs": "cross-env NODE-ENV=production && babel src -d lib --extensions=.ts --no-babelrc --presets=@babel/preset-env,@babel/preset-typescript",
+    "build:es": "cross-env NODE-ENV=production && babel src -d es --extensions=.ts --no-babelrc --presets=@babel/preset-typescript",
     "test": "npm run lint && nyc --nycrc-path .nycrc-ts mocha",
     "coveralls": "nyc --nycrc-path .nycrc-ts report --reporter=text-lcov | coveralls",
     "release": "npm test && npm run build && git commit -am $npm_package_version && git push && git tag $npm_package_version && git push --tags"
