--- a/package.json
+++ b/package.json
@@ -12,31 +12,16 @@
     "clean": "rimraf ./dist ./es ./lib",
     "lint": "eslint -c .eslintrc.js src/**/*.ts",
     "lint:fix": "eslint -c .eslintrc.js src/**/*.ts --fix",
-    "build:self": "rollup -c config/rollup.config.js",
+    "build:cjs": "rollup -c config/rollup.config.js",
     "build:esm": "rollup -c config/rollup.config.esm.js",
-    "build:aio": "rollup -c config/rollup.config.aio.js",
-    "build:aio.min": "cross-env NODE_ENV=production npm run build:aio",
-    "build:cjs": "cross-env NODE-ENV=production && babel src -d lib --extensions=.ts --no-babelrc --presets=@babel/preset-env,@babel/preset-typescript",
+    "build:umd": "rollup -c config/rollup.config.aio.js",
+    "build:umd.min": "cross-env NODE_ENV=production npm run build:umd",
+    "build:lib": "cross-env NODE-ENV=production && babel src -d lib --extensions=.ts --no-babelrc --presets=@babel/preset-env,@babel/preset-typescript",
     "build:es": "cross-env NODE-ENV=production && babel src -d es --extensions=.ts --no-babelrc --presets=@babel/preset-typescript",
-    "build": "npm run clean && npm run build:cjs && npm run build:es && npm run build:self && npm run build:esm && npm run build:aio && npm run build:aio.min",
+    "build": "npm run clean && npm run build:cjs && npm run build:es && npm run build:self && npm run build:esm && npm run build:umd && npm run build:umd.min",
     "test": "npm run lint && nyc --nycrc-path .nycrc-ts mocha",
     "coveralls": "nyc --nycrc-path .nycrc-ts report --reporter=text-lcov | coveralls",
     "release": "npm test && npm run build && git commit -am $npm_package_version && git push && git tag $npm_package_version && git push --tags"
-  },
-  "scripts:js": {
-    "rename": "node rename.js",
-    "clean": "rimraf ./dist",
-    "lint": "eslint -c .eslintrc.js src/**/*.js",
-    "lint:fix": "eslint --fix -c .eslintrc.js src/**/*.js",
-    "build:self": "rollup -c config/rollup.config.js",
-    "build:esm": "rollup -c config/rollup.config.esm.js",
-    "build:aio": "rollup -c config/rollup.config.aio.js",
-    "build:aio.min": "cross-env NODE_ENV=production npm run build:aio",
-    "build": "npm run clean && npm run build:self && npm run build:esm && npm run build:aio && npm run build:aio.min",
-    "mocha": "mocha --require @babel/register ./test/**/*.js",
-    "test": "npm run lint && cross-env NODE_ENV=test nyc mocha",
-    "coveralls": "nyc report --reporter=text-lcov | coveralls",
-    "release": "npm test && npm run build && git commit -am $npm_package_version && git tag $npm_package_version && git push && git push --tags"
   },
   "author": "nianqin",
   "license": "MIT",
