--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "clean": "rimraf ./dist ./es ./lib",
     "lint": "eslint -c .eslintrc.js src/**/*.ts",
     "lint:fix": "eslint -c .eslintrc.js src/**/*.ts --fix",
-    "build:cjs": "rollup -c config/rollup.config.js",
+    "build:cjs": "rollup -c config/rollup.config.cm.js",
     "build:esm": "rollup -c config/rollup.config.esm.js",
-    "build:umd": "rollup -c config/rollup.config.aio.js",
+    "build:umd": "rollup -c config/rollup.config.js",
     "build:umd.min": "cross-env NODE_ENV=production npm run build:umd",
     "build:lib": "cross-env NODE-ENV=production && babel src -d lib --extensions=.ts --no-babelrc --presets=@babel/preset-env,@babel/preset-typescript",
     "build:es": "cross-env NODE-ENV=production && babel src -d es --extensions=.ts --no-babelrc --presets=@babel/preset-typescript",
