--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "expect.js": "^0.3.1",
     "jsdom": "^15.1.1",
     "jsdom-global": "^3.0.2",
+    "lodash": "^4.17.15",
     "mocha": "^6.2.0",
     "nyc": "^14.1.1",
     "rimraf": "^2.6.3",
