--- a/package.json
+++ b/package.json
@@ -5,6 +5,12 @@
   "main": "dist/index.js",
   "jsnext:main": "es/index.js",
   "module": "lib/index.js",
+  "files": [
+    "src",
+    "dist",
+    "lib",
+    "es"
+  ],
   "sideEffects": false,
   "srctype": "ts",
   "scripts": {
@@ -39,6 +45,7 @@
     "@babel/plugin-transform-runtime": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-typescript": "^7.3.3",
+    "@babel/runtime": "^7.5.5",
     "@babel/register": "^7.5.5",
     "@typescript-eslint/eslint-plugin": "^1.13.0",
     "@typescript-eslint/parser": "^1.13.0",
@@ -67,8 +74,5 @@
     "typescript": "^3.5.3"
   },
   "dependencies": {
-    "@babel/runtime": "^7.5.5",
-    "@jsmini/extend": "^0.3.1",
-    "@jsmini/type": "^0.8.0"
   }
 }
