--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nq-tslib-base",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "A modern Typescript library scaffolding",
   "main": "dist/index.js",
   "jsnext:main": "es/index.js",
@@ -28,7 +28,8 @@
     "build": "npm run clean && npm run build:lib && npm run build:es && npm run build:umd && npm run build:cjs && npm run build:esm && npm run build:umd.min && npm run build:cjs.min",
     "test": "npm run lint && nyc --nycrc-path .nycrc-ts mocha",
     "coveralls": "nyc --nycrc-path .nycrc-ts report --reporter=text-lcov | coveralls",
-    "release": "npm test && npm run build && standard-version"
+    "release": "npm test && npm run build && standard-version",
+    "standard-version": "npm test && npm run build && standard-version"
   },
   "author": "nqdy666",
   "license": "MIT",
