--- a/package.json
+++ b/package.json
@@ -28,8 +28,13 @@
     "build": "npm run clean && npm run build:lib && npm run build:es && npm run build:umd && npm run build:cjs && npm run build:esm && npm run build:umd.min && npm run build:cjs.min",
     "test": "npm run lint && nyc --nycrc-path .nycrc-ts mocha",
     "coveralls": "nyc --nycrc-path .nycrc-ts report --reporter=text-lcov | coveralls",
-    "release": "npm test && npm run build && git commit -am 'release' && standard-version",
+    "release": "standard-version",
     "standard-version": "standard-version"
+  },
+  "standard-version": {
+    "scripts": {
+      "postchangelog": "npm test && npm run build && git commit -am 'release'"
+    }
   },
   "author": "nqdy666",
   "license": "MIT",
