--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "nq-tslib-base",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "description": "A modern Typescript library scaffolding",
   "main": "dist/index.js",
+  "types": "index.d.ts",
   "jsnext:main": "es/index.js",
   "module": "lib/index.js",
   "files": [
