--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,8 @@
   "compilerOptions": {
     "target": "ES5",
     "module": "commonjs",
-    "declarationDir": "."
+    "declarationDir": ".",
+    "esModuleInterop": true
   },
   "include": [
     "src/**/*.ts"
