--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.9",
   "description": "A modern Typescript library scaffolding",
   "main": "dist/index.js",
-  "types": "index.d.ts",
+  "types": "types/index.d.ts",
   "jsnext:main": "es/index.js",
   "module": "lib/index.js",
   "files": [
@@ -11,7 +11,7 @@
     "dist",
     "lib",
     "es",
-    "index.d.ts"
+    "types"
   ],
   "sideEffects": false,
   "srctype": "ts",
@@ -28,7 +28,8 @@
     "build:lib": "babel src -d lib --extensions=.ts --no-babelrc --presets=@babel/preset-env,@babel/preset-typescript",
     "build:es": "babel src -d es --extensions=.ts --no-babelrc --presets=@babel/preset-typescript",
     "build": "npm run clean && npm run build:lib && npm run build:es && npm run build:umd && npm run build:cjs && npm run build:esm && npm run build:umd.min && npm run build:cjs.min",
-    "test": "npm run lint && nyc --nycrc-path .nycrc-ts mocha",
+    "test:only": "nyc --nycrc-path .nycrc-ts mocha",
+    "test": "npm run lint && npm run test:only",
     "coveralls": "nyc --nycrc-path .nycrc-ts report --reporter=text-lcov | coveralls",
     "release:only": "git commit -am %npm_package_version% && git tag %npm_package_version% && git push && git push --tags && echo 'i Run `npm publish` to publish'",
     "release": "npm test && npm run build && npm run release:only"
