--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "ES5",
     "module": "commonjs",
-    "declarationDir": ".",
+    "declarationDir": "types",
     "esModuleInterop": true
   },
   "include": [
