--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nq-tslib-base",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "A modern Typescript library scaffolding",
   "main": "dist/index.js",
   "types": "types/index.d.ts",
@@ -31,7 +31,7 @@
     "test:only": "nyc --nycrc-path .nycrc-ts mocha",
     "test": "npm run lint && npm run test:only",
     "coveralls": "nyc --nycrc-path .nycrc-ts report --reporter=text-lcov | coveralls",
-    "release:only": "git commit -am %npm_package_version% && git tag %npm_package_version% && git push && git push --tags && echo 'i Run `npm publish` to publish'",
+    "release:only": "git commit -am %npm_package_version% && git tag v%npm_package_version% && git push && git push --tags && echo 'i Run `npm publish` to publish'",
     "release": "npm test && npm run build && npm run release:only"
   },
   "author": "nqdy666",
