--- a/package.json
+++ b/package.json
@@ -53,7 +53,6 @@
     "@typescript-eslint/eslint-plugin": "^1.13.0",
     "@typescript-eslint/parser": "^1.13.0",
     "babel-plugin-istanbul": "^5.2.0",
-    "cdkit": "^1.3.0",
     "coveralls": "^3.0.6",
     "cross-env": "^5.2.0",
     "es5-shim": "^4.5.13",
@@ -64,6 +63,7 @@
     "lodash": "^4.17.15",
     "mocha": "^6.2.0",
     "nyc": "^14.1.1",
+    "replace-in-file": "^4.1.3",
     "rimraf": "^2.6.3",
     "rollup": "^1.19.4",
     "rollup-plugin-babel": "^4.3.3",
