--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "babel-plugin-istanbul": "^5.2.0",
     "coveralls": "^3.0.6",
     "cross-env": "^5.2.1",
+    "cross-var": "^1.1.0",
     "es5-shim": "^4.5.13",
     "eslint": "^6.5.1",
     "expect.js": "^0.3.1",
