--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "test:only": "nyc --nycrc-path .nycrc-ts mocha",
     "test": "npm run lint && npm run test:only",
     "coveralls": "nyc --nycrc-path .nycrc-ts report --reporter=text-lcov | coveralls",
-    "release:only": "git commit -am %npm_package_version% && git tag v%npm_package_version% && git push && git push --tags && echo 'i Run `npm publish` to publish'",
+    "release:only": "cross-var git commit -am $npm_package_version && git tag v$npm_package_version && git push && git push --tags && echo 'i Run `npm publish` to publish'",
     "release": "npm test && npm run build && npm run release:only"
   },
   "author": "nqdy666",
